# fguctl

./: .crom.toml  .gitignore  Cargo.toml  README.md
.github/workflows/: publish.yml  verify.yml
src/: main.rs
src/module/: cli.rs  inputs.rs  mod.rs  output.rs
src/module/output/: fgu_module.rs  mod.rs  spell.rs  tables.rs
