[package]
name = "fguctl"
version = "0.1.0"
authors = ["Ethan Hall <ethan@hall.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "*"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "3.0.0-beta.2" }
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "*"
tracing-subscriber = "0.2.16"
tracing = "0.1.25"
quick-xml = "*"
markdown = "0.3.0"
zip = "0.5.13"
lazy_static = "1.4.0"